# gencode

./: Cargo.toml  LICENSE  README.md  g.h
src/: main.rs
src/lib/: adjacency.rs  charset.rs  codec.rs  ffi.rs  index.rs  lz77.rs  mod.rs  package.rs  stream.rs  stream_api.rs  text.rs
src/lib/rnce/: cmix.rs  codec.rs  dispatch.rs  freq.rs  lang.rs  mod.rs  model.rs  ppm_byte.rs  token.rs
src/rnce/: codec.rs  compressor.rs  g_index.rs  grammar.rs  lexer.rs  match_model.rs  mixer.rs
